@@ -28,4 +28,5 @@ AV2 Changelog :: version a4.2
 > Fix chat formatting messed up on server console
 > Fix air bubble Undercurrent upgrade not working on leaves
 > Fix bison saddle duplication
+> Fix no XP gain for water bubble
 > Remove old "click to open" prompt in radial menu
